# Eleanor

./: Cargo.toml  flake.nix
.github/workflows/: build_nix.yml
src/: main.rs
src/backend/: config.rs  error.rs  fetching.rs  http_decoder.rs  indexing.rs  kdl_utils.rs  logging.rs  mod.rs  playback.rs  replaygain.rs  utils.rs
src/backend/migrator/: m20220803_000001_create_library.rs  m20220803_000001_create_playlist_entries.rs  m20220803_000001_create_playlists.rs  m20240223_185340_create_sources.rs  mod.rs
src/backend/model/: library.rs  mod.rs  playlist_entries.rs  playlists.rs  prelude.rs  sources.rs
