[package]
name = "eleanor"
version = "0.1.0"
edition = "2021"
authors = ["Agatha Lovelace <agatha@technogothic.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adler = "1.0.2"
dirs = "4.0.0"
lofty = "0.7.3"
miette = { version = "5.2.0", features = ["fancy"] }
mime = "0.3.16"
mime_guess = "2.0.4"
paris = { version = "1.5.13", features = ["macros"] }
reqwest = "0.11.12"
rmp-serde = "1.1.0"
sea-orm = { version = "0.9.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "^0.9.0"
sea-query = "0.26.2"
serde = { version = "1.0.142", features = ["derive"] }
symphonia = { version = "0.5.1", features = ["flac", "mp3", "vorbis", "ogg", "wav"] }
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
walkdir = "2.3.2"
