[package]
name = "eleanor"
version = "0.1.1"
edition = "2021"
authors = ["Agatha V. Lovelace <agatha@technogothic.net>"]
license = "NVPLv7+"

[dependencies]
adler = "1.0.2"
chrono = "0.4.31"
dirs = "5.0.1"
kdl = "4.6.0"
lofty = "0.18.2"
miette = { version = "5.10.0", features = ["fancy"] }
mime = "0.3.17"
mime_guess = "2.0.4"
owo-colors = "3.5.0"
rayon = "1.8.1"
replaygain = "1.0.1"
sea-orm = { version = "0.12.4", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12.4"
sea-query = "0.30.2"
symphonia = { version = "0.5.4", features = ["all"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.33.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
